--- a/src/data/templates/knowledgeBase.json
+++ b/src/data/templates/knowledgeBase.json
@@ -16,6 +16,8 @@
       "title": "记忆卡片",
       "kind": "flashcards",
       "isFixed": false,
+      "icon": "🃏",
+      "color": "#f97316",
       "items": [
         {
           "id": "kb-item-flash-1",
@@ -40,6 +42,8 @@
       "title": "错题本",
       "kind": "mistakes",
       "isFixed": false,
+      "icon": "⚠️",
+      "color": "#facc15",
       "items": [
         {
           "id": "kb-item-mistake-1",
@@ -64,6 +68,8 @@
       "title": "AI 对话记录",
       "kind": "aiChats",
       "isFixed": false,
+      "icon": "🤖",
+      "color": "#38bdf8",
       "items": [
         {
           "id": "kb-item-chat-1",
@@ -88,6 +94,8 @@
       "title": "网站收藏",
       "kind": "links",
       "isFixed": false,
+      "icon": "🔗",
+      "color": "#a855f7",
       "items": [
         {
           "id": "kb-item-link-1",
@@ -114,6 +122,8 @@
       "title": "上传资料",
       "kind": "uploads",
       "isFixed": false,
+      "icon": "📤",
+      "color": "#f472b6",
       "items": [
         {
           "id": "kb-item-upload-1",
@@ -138,6 +148,8 @@
       "title": "笔记",
       "kind": "notes",
       "isFixed": false,
+      "icon": "📝",
+      "color": "#34d399",
       "items": [
         {
           "id": "kb-item-note-1",
@@ -162,6 +174,8 @@
       "title": "未分类",
       "kind": "uncategorized",
       "isFixed": true,
+      "icon": "📥",
+      "color": "#94a3b8",
       "items": [
         {
           "id": "kb-item-unsorted-1",
