--- a/src/data/categories/westernPhilosophy/knowledgeBase/knowledgeBase.json
+++ b/src/data/categories/westernPhilosophy/knowledgeBase/knowledgeBase.json
@@ -1,7 +1,7 @@
 ﻿{
   "id": "library-western-philosophy",
-  "title": "西方哲学",
-  "description": "从古希腊到 20 世纪思想史的结构化提要",
+  "title": "西方哲学思维仓",
+  "description": "覆盖希腊—现代的核心议题，配合问答卡、论证拆解与原典跳转。",
   "connectedVaults": {
     "activeGoal": ["kb-flashcards", "kb-mistakes", "kb-notes"],
     "newGoal": ["kb-uncategorized", "kb-notes"]
@@ -9,7 +9,7 @@
   "categories": [
     {
       "id": "kb-flashcards",
-      "title": "哲学脉络",
+      "title": "流派速记",
       "kind": "flashcards",
       "isFixed": false,
       "icon": "📚",
@@ -17,65 +17,68 @@
       "items": [
         {
           "id": "kb-philo-card-1",
-          "summary": "柏拉图理念论",
-          "detail": "真实存在于理念界，感知世界只是影子；认识=回忆。",
-          "source": "课堂速记",
-          "updatedAt": "今天 10:05",
-          "goalId": "goal-linear"
+          "summary": "柏拉图洞喻",
+          "detail": "区分感官世界的影像与理念界真知，核心论点=提升灵魂。",
+          "source": "AI 精简",
+          "updatedAt": "今天 10:05"
         },
         {
           "id": "kb-philo-card-2",
-          "summary": "亚里士多德四因说",
-          "detail": "质料因、形式因、动力因、目的因解释事物生成。",
-          "source": "课堂速记",
-          "updatedAt": "今天 10:12",
-          "goalId": "goal-linear"
+          "summary": "笛卡尔怀疑法",
+          "detail": "依次质疑感官、梦境、数学，直至 cogito ergo sum。",
+          "source": "抽认卡",
+          "updatedAt": "今天 10:12"
         },
         {
           "id": "kb-philo-card-3",
-          "summary": "笛卡尔方法论",
-          "detail": "普遍怀疑—我思故我在—演绎建构科学体系。",
-          "source": "AI 解析",
-          "updatedAt": "今天 10:20",
-          "goalId": "goal-linear"
+          "summary": "康德三大批判",
+          "detail": "《纯粹理性》《实践理性》《判断力》分别讨论认识、道德、美感。",
+          "source": "自制卡片",
+          "updatedAt": "今天 10:18"
         },
         {
           "id": "kb-philo-card-4",
-          "summary": "康德三大批判",
-          "detail": "《纯粹理性》《实践理性》《判断力》构成批判哲学。",
-          "source": "AI 解析",
-          "updatedAt": "今天 10:26",
-          "goalId": "goal-linear"
+          "summary": "维特根斯坦语言游戏",
+          "detail": "意义来自使用情景，反例：私有语言不可检验。",
+          "source": "课堂整理",
+          "updatedAt": "今天 10:26"
         }
       ]
     },
     {
       "id": "kb-mistakes",
-      "title": "讨论盲点",
+      "title": "论证盲点",
       "kind": "mistakes",
       "isFixed": false,
-      "icon": "💡",
+      "icon": "🚨",
       "color": "#f97316",
       "items": [
         {
           "id": "kb-philo-mistake-1",
-          "summary": "混淆经验论与理性论",
-          "detail": "前者强调感官经验，后者强调先天理性，不应简单对立。",
-          "source": "研讨记录",
-          "updatedAt": "昨天 19:40"
+          "summary": "混淆实体与范畴",
+          "detail": "亚里士多德的“实体”指内在形式，不等于物质载体。",
+          "source": "讨论课",
+          "updatedAt": "今天 11:00"
         },
         {
           "id": "kb-philo-mistake-2",
-          "summary": "误解海德格尔存在论",
-          "detail": "其核心是此在经验，不是抽象本体论。",
-          "source": "研讨记录",
-          "updatedAt": "昨天 18:15"
+          "summary": "把尼采误读成相对主义",
+          "detail": "他批判真理绝对化，但仍主张生命力与价值创造。",
+          "source": "批改记录",
+          "updatedAt": "今天 11:08"
+        },
+        {
+          "id": "kb-philo-mistake-3",
+          "summary": "海德格尔术语乱译",
+          "detail": "Dasein 应译“此在”，若写“存在”会让后续分析断裂。",
+          "source": "AI 诊断",
+          "updatedAt": "今天 11:15"
         }
       ]
     },
     {
       "id": "kb-links",
-      "title": "原典链接",
+      "title": "原典跳转",
       "kind": "links",
       "isFixed": true,
       "icon": "🔗",
@@ -84,33 +87,33 @@
         {
           "id": "kb-philo-link-1",
           "summary": "斯坦福哲学百科",
-          "detail": "高质量哲学条目，入门与拓展兼顾。",
-          "source": "在线百科",
-          "updatedAt": "今天 09:00",
+          "detail": "高质量条目，适合查概念与史料。",
+          "source": "开放资源",
+          "updatedAt": "今天 09:40",
           "href": "https://plato.stanford.edu/"
         },
         {
           "id": "kb-philo-link-2",
-          "summary": "History of Philosophy without any gaps",
-          "detail": "按时间顺序梳理哲学史的播客。",
+          "summary": "History of Philosophy – podcast",
+          "detail": "按时序讲述，从前苏格拉底到当代。",
           "source": "播客",
-          "updatedAt": "今天 08:50",
+          "updatedAt": "今天 09:45",
           "href": "https://historyofphilosophy.net/"
         }
       ]
     },
     {
       "id": "kb-uploads",
-      "title": "收集资料",
+      "title": "我的资料",
       "kind": "uploads",
       "isFixed": true,
       "icon": "🗂️",
-      "color": "#8b5cf6",
+      "color": "#a855f7",
       "items": []
     },
     {
       "id": "kb-notes",
-      "title": "札记",
+      "title": "论证拆解",
       "kind": "notes",
       "isFixed": true,
       "icon": "📝",
@@ -118,33 +121,33 @@
       "items": [
         {
           "id": "kb-philo-note-1",
-          "summary": "《斐多篇》阅读摘录",
-          "detail": "灵魂不灭论与理念界论证结构。",
-          "source": "读书笔记",
-          "updatedAt": "今天 09:30",
+          "summary": "经验主义 vs. 理性主义",
+          "detail": "列对照表：知识来源、代表人物、核心论点。",
+          "source": "课堂速记",
+          "updatedAt": "今天 10:40",
           "noteId": "note-philo-1"
         },
         {
           "id": "kb-philo-note-2",
-          "summary": "洛克知识论",
-          "detail": "白板说+简单观念组合为复杂观念。",
-          "source": "读书笔记",
-          "updatedAt": "今天 09:20",
+          "summary": "存在主义写作模板",
+          "detail": "先界定“存在先于本质”，再举萨特/加缪实例。",
+          "source": "写作范式",
+          "updatedAt": "今天 10:45",
           "noteId": "note-philo-2"
         },
         {
           "id": "kb-philo-note-3",
-          "summary": "尼采永恒轮回",
-          "detail": "作为价值检验的“最大负担”。",
-          "source": "读书笔记",
-          "updatedAt": "今天 09:10",
+          "summary": "批判理论三层面",
+          "detail": "经济基础、文化工业、主体解放——适合回答议论文。",
+          "source": "AI Draft",
+          "updatedAt": "今天 10:50",
           "noteId": "note-philo-3"
         }
       ]
     },
     {
       "id": "kb-uncategorized",
-      "title": "未分类",
+      "title": "未归档",
       "kind": "uncategorized",
       "isFixed": true,
       "icon": "📥",
