--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite": "^6.4.1"
   },
   "dependencies": {
-    "katex": "^0.16.25"
+    "katex": "^0.16.25",
+    "marked": "^15.0.12"
   }
 }
