改善复习系统

--- a/src/data/categories/calculus/knowledgeBase/knowledgeBase.json
+++ b/src/data/categories/calculus/knowledgeBase/knowledgeBase.json
@@ -27,7 +27,7 @@
           "id": "kb-calc-card-2",
           "summary": "导数四种理解",
           "detail": "斜率、瞬时变化率、切线、极值判别；配图帮助记忆。",
-          "source": "抽认卡",
+          "source": "记忆卡片",
           "updatedAt": "今天 08:18",
           "goalId": "goal-calculus"
         },
