--- a/src/data/categories/westernPhilosophy/knowledgeBase/knowledgeBase.json
+++ b/src/data/categories/westernPhilosophy/knowledgeBase/knowledgeBase.json
@@ -26,7 +26,7 @@
           "id": "kb-philo-card-2",
           "summary": "笛卡尔怀疑法",
           "detail": "依次质疑感官、梦境、数学，直至 cogito ergo sum。",
-          "source": "抽认卡",
+          "source": "记忆卡片",
           "updatedAt": "今天 10:12"
         },
         {
